# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: on_push_test_build.yml
gendiff/: data_getter.py  gendiff.py  parser.py
gendiff/formatter/: __init__.py  format_libr.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: FILE1.yaml  FILE2.yml  plain2.txt  plain3.txt  result.json
