[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["minami-11 <madk0te@yandex.ru>"]
readme = "README.md"
repository = "git@github.com:minami-11/python-project-50.git"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
